chore: Configure production deployment for Railway and Vercel
- Update README with professional formatting (no emojis)
- Add environment variable support for API URL in frontend
- Update CORS config to support Vercel and Railway domains
- Add SPRING_PROFILES_ACTIVE=prod to Dockerfile
- Add vercel.json for SPA routing and security headers
- Add railway.json for deployment configuration